client/src/App.css
.Nav-Container {
  margin: 0 auto;
  width: 960px;
}

.Nav {
  float: left;
  border: 0px solid;
  width: 150px;
}

.App {
  float: left;
  margin-left: 50px;
  border: 0px solid;
  width: 656px;
}

.App-expand {
  float: left;
  margin-left: 50px;
  border: 0px solid;
  width: 750px;
}

ul {
  list-style-type: none;
  padding: 0;
  line-height: 44px;
  font-size: 19px;
  letter-spacing: 1px;
  font-family: 'Gloria Hallelujah', "Roboto", "Open Sans", "Helvetica Neue", cursive;
}

.link {
  color: black;
  text-decoration: none;
}

.link:hover {
  color: #86A3A3;
  text-decoration: none;
}

/* 
  header
*/
.header {
  padding-top: 40px;
}

/* 
  bear inlay
*/
.bear {
  width: 180px;
  margin-left: -15px;
  margin-top: 40px;
}

/* 
  body styles
*/
.image {
  width: 656px;
}

.mobile-image {
  width: 200px;
  margin-right: auto;
  margin-left: auto;
}

.github {
  width: 35px;
  padding-top: 20px;
  padding-right: 20px;
}

.github-container {
  float: right;
  padding-top: 5px;
}

.github-container:hover {
  padding-top: 2px;
}

.title-container {
  float: left;
}

.description {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
}

/* 
  centering multiple imgs
*/

.container {
  width: 600px;
  margin-left: auto; 
  margin-right: auto;

   text-align: justify;
  -ms-text-justify: distribute-all-lines;
  text-justify: distribute-all-lines;
}

.container a {
  vertical-align: top;
  display: inline-block;
  *display: inline;
  zoom: 1;
}

.stretch {
    width: 100%;
    display: inline-block;
    font-size: 0;
    line-height: 0
}

/*
  home styles
*/
.profile {
  border-radius: 50%;
  height: 155px;
  margin: 24px 0 0 15px;
}

.icon {
  height: 20px;
  width: 20px;
  object-fit: cover;
  margin-left: 10px;
  margin-right: 10px;
}

.icon:hover {
  border-bottom: 2px solid white;
}

.icon-container {
  display: inline-block;
  margin-left: 80px;
}

.about-left {
  display: inline-block;
  vertical-align: top;
  margin-left: -15px;
}

.about-right {
  display: inline-block;
  vertical-align: top;
  width: 380px;
  text-align: left;
  margin-left: 30px;
}

.home-title-container {
  display: inline-block;
  width: 400px;
}

/*
  fonts
*/

p {
  font-family: "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 13px;
  line-height: 28px;
  color: #627878;
  font-weight: 300;
  letter-spacing: .5px
}

h2 {
  font-family: "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 36px;
  line-height: 28px;
  color: #374837;
  font-weight: 100;
  letter-spacing: .7px;
}

h1 {
  list-style-type: none;
  line-height: 44px;
  font-size: 26px;
  letter-spacing: 0px;
  font-family: 'Gloria Hallelujah', "Roboto", "Open Sans", "Helvetica Neue", cursive;
}

h3 {
  list-style-type: none;
  line-height: 44px;
  font-size: 18px;
  letter-spacing: 0px;
  font-family: 'Gloria Hallelujah', "Roboto", "Open Sans", "Helvetica Neue", cursive;
}

h4 {
  list-style-type: none;
  line-height: 44px;
  font-size: 18px;
  letter-spacing: 0px;
  font-family: "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

/*
  project nav
*/
.projects-container {
   text-align: justify;
  -ms-text-justify: distribute-all-lines;
  text-justify: distribute-all-lines;
  margin-top: -10px;
}
.project-container {
  text-align: center;
  display: inline-block;
  width: 200px;
  margin-right: 50px;
}
.crop-container {
  width: 200px;
  height: 200px;
  overflow: hidden;
  border-radius: 50%;
  border: .5px solid #D1DEDE;
  display: inline-block;
  text-align: center;
  margin-top: -20px;
}
.crop-container:hover {
  border: .5px solid black;
}
.crop-img {
  width: 200px;
  object-fit: cover;
  margin-top: -40px
}
.crop-img-web {
  width: 450px;
  object-fit: cover;
  margin-top: 10px;
}
.crop-img-web2 {
  width: 600px;
  object-fit: cover;
  margin-top: 0px;
  margin-left: -202px
}

